--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "pn": "^1.0.0",
     "ps-node": "^0.1.6",
     "svg2png": "^4.1.1",
-    "didyoumean2": "^1.3.0"
+    "didyoumean2": "^1.3.0",
+    "webshot": "^0.18.0",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2"
   }
 }
