--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "barrens-bot",
   "version": "0.1.0",
   "dependencies": {
+    "didyoumean2": "^1.3.0",
     "discord.js": "^11.1.0",
+    "line-by-line": "^0.1.6",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
     "mysql": "^2.13.0",
     "pn": "^1.0.0",
     "ps-node": "^0.1.6",
     "svg2png": "^4.1.1",
-    "didyoumean2": "^1.3.0",
-    "webshot": "^0.18.0",
-    "moment": "^2.22.2",
-    "moment-duration-format": "^2.2.2"
+    "webshot": "^0.18.0"
   }
 }
