Log GM commands to Discord

--- a/config.json.dist
+++ b/config.json.dist
@@ -30,5 +30,10 @@
     "logfile": "",
     "channelId": "",
     "chatPrefix": ""
+  },
+  "gmCommandLog": {
+    "checkInterval": 60000,
+    "logfile": "",
+    "channelId": ""
   }
 }
